-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.6.0-beta1
-
80712e80a3ef5cb2d694d4c52723a031fa18f7a5
Qt Creator tries to start "qtcreator_process_stub" next to the binary of the running application in Utils::consoleprocess_*.cpp. This fails since the binary is now in the libexec directory.
The libexec path should also be configurable. E.g. archlinux has no libexec directory and uses subdirectories in lib instead.