Utils: Fix process stub look-up.

The path where the tools are located has changed.

Task-number: QTCREATORBUG-14732
Change-Id: Idb404b291ef651d2c0f03bce454b9aa0c0319183
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>